php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31920 error: conflicting types for 'int8_t'
Submitted: 2005-02-10 21:18 UTC Modified: 2005-02-10 23:20 UTC
From: vadim at xport dot ru Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4CVS-2005-02-10 (stable) OS: FreeBSD 5.3
Private report: No CVE-ID: None
 [2005-02-10 21:18 UTC] vadim at xport dot ru
Description:
------------
/bin/sh /usr/home/admin/install/php4-STABLE-200502101930/libtool --silent --preserve-
dup-deps --mode=compile gcc  -IZend/ -I/usr/home/admin/install/php4-STABLE-2005021019
30/Zend/ -DPHP_ATOM_INC -I/usr/home/admin/install/php4-STABLE-200502101930/include -I
/usr/home/admin/install/php4-STABLE-200502101930/main -I/usr/home/admin/install/php4-
STABLE-200502101930 -I/usr/home/admin/install/php4-STABLE-200502101930/Zend -I/usr/lo
cal/include -I/usr/X11R6/include -I/usr/local/include/freetype2 -I/usr/local/include/
c-client -I/usr/local/ssl/include -I/usr/home/admin/install/php4-STABLE-200502101930/
ext/xml/expat  -I/usr/home/admin/install/php4-STABLE-200502101930/TSRM  -O2  -prefer-
non-pic -c /usr/home/admin/install/php4-STABLE-200502101930/Zend/zend_strtod.c -o Zen
d/zend_strtod.lo                                                                     
In file included from /usr/home/admin/install/php4-STABLE-200502101930/Zend/zend_strt
od.c:138:                                                                            
/usr/include/sys/bitypes.h:25: error: conflicting types for 'int8_t'                 
/usr/include/sys/types.h:62: error: previous declaration of 'int8_t' was here        
*** Error code 1                                                                     
                                                                                     
Stop in /usr/home/admin/install/php4-STABLE-200502101930.                            


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-02-10 23:20 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Aug 17 00:00:03 2026 UTC