- Fixed bug #31920 (zend_strtod.c error: conflicting types for 'int8_t')

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@179514 c90b9560-bf6c-de11-be94-00142212c4b1